search: Fix options alignment (cf. 352b1dd)

--- a/user-interface/src/main/angular/projects/labbcat-view/src/app/search/search.component.css
+++ b/user-interface/src/main/angular/projects/labbcat-view/src/app/search/search.component.css
@@ -108,6 +108,7 @@ details[open] > div {
     content: ':';
 }
 .list {
+    margin: unset;
     margin-top: 5px;
 }
 .list-label {
